--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-runner",
+  "name": "better-reporter",
   "version": "0.0.0",
-  "description": "Small description for test-runner goes here",
+  "description": "Small description for better-reporter goes here",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -23,14 +23,12 @@
     "ember-cli": "0.2.7",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
+    "ember-cli-qunit": "0.3.14",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2"
   }
